Fix aligning several elements

--- a/styles.css
+++ b/styles.css
@@ -45,20 +45,23 @@ body {
     margin-right: auto;
     flex: none;
     font-size: 24px;
+    font-weight: 900;
 }
 
 .menu-right {
     color: #E5E7EB;
     text-align: center;
     padding-top: 6px;
+    white-space: nowrap;
 }
 
 .hero {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
+    flex-wrap: wrap;
     padding-top: 50px;
-    gap: 30px;
+    gap: 50px;
 }
 
 .hero-left {
@@ -77,6 +80,7 @@ body {
     & > img {
         /* height: 100%; */
         max-width: 100%;
+        border-radius: 10px;
     }
 }
 
@@ -103,6 +107,7 @@ body {
 
 .section.info {
     flex-direction: column;
+    align-items: stretch;
     padding-top: 60px;
     padding-bottom: 120px;
 }
@@ -117,8 +122,7 @@ body {
 
 .info.imgs {
     display: flex;
-    flex: 0 1 0px;;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
     flex-wrap: wrap;
     gap: 30px;
